ingress/ingress-wildcard-host.yaml
# wildcard akses request berdasarkan host.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-wildcard-host
spec: 
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend: 
          service:
            name: service1
            port:
              number: 80
  - host: ".foo.com"
    http:
      paths:
        - pathType: Prefix
          path: "/foo"
          backend:
            service: 
              name: service2
              port: 
                number: 80
